--- a/.github/workflows/apprunner-deploy.yml
+++ b/.github/workflows/apprunner-deploy.yml
@@ -11,19 +11,29 @@ jobs:
       contents: read
 
     steps:
+      # Step 1: Checkout your repo
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Step 2: Configure AWS credentials via IDC
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      # Step 3: Deploy frontend container to App Runner
       - name: Deploy frontend to App Runner
+        id: deploy-frontend
         uses: awslabs/amazon-app-runner-deploy@main
         with:
           service: my-frontend-app
           image-repository: ${{ secrets.AWS_ECR_FRONT_REPO }}
           image-tag: latest
+
+      # Step 4: Deploy backend container to App Runner
       - name: Deploy backend to App Runner
+        id: deploy-backend
         uses: awslabs/amazon-app-runner-deploy@main
         with:
           service: my-backend-app
