--- a/.github/workflows/apprunner-deploy.yml
+++ b/.github/workflows/apprunner-deploy.yml
@@ -10,17 +10,43 @@ jobs:
       id-token: write
       contents: read
 
+    env:
+      REGION: ${{ secrets.AWS_REGION }}
+      ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      BACKEND_IMAGE: my-backend-app
+      FRONTEND_IMAGE: my-frontend-app
+
     steps:
       # Step 1: Checkout your repo
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       # Step 2: Configure AWS credentials via IDC
-      - name: Configure AWS
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        run: |
+          aws ecr get-login-password --region $REGION | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com
+
+      - name: Build backend image
+        run: |
+          docker build -t $BACKEND_IMAGE -f ./backend/Dockerfile .
+          docker tag $BACKEND_IMAGE:latest $ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$BACKEND_IMAGE:latest
+          docker push $ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$BACKEND_IMAGE:latest
+
+      - name: Build frontend image
+        run: |
+          docker build -t $FRONTEND_IMAGE -f ./frontend/Dockerfile .
+          docker tag $FRONTEND_IMAGE:latest $ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$FRONTEND_IMAGE:latest
+          docker push $ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$FRONTEND_IMAGE:latest
 
       # Step 3: Deploy frontend container to App Runner
       - name: Deploy frontend to App Runner
