--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - NODE_ENV=production
       - PORT=4000
       - DATABASE_URL=postgres://postgres:postgres@db:5432/dmvelt
+      - FRONTEND_URL=https://5xgxzt8wr2.us-east-1.awsapprunner.com:3000
     ports:
       - "4000:4000"
 
@@ -28,7 +29,7 @@ services:
       - ./shared:/app/shared
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_API_URL=http://localhost:4000
+      - NEXT_PUBLIC_API_URL=https://5xgxzt8wr2.us-east-1.awsapprunner.com:4000
     ports:
       - "3000:3000"
   db:
