--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "build": "npm run clean && tsc",
+    "build": "tsc",
     "start": "node src/server.js",
     "generate:types": "json2ts -i ./prisma/json-schema/json-schema.json -o ../shared/api-types.ts"
   },
